--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Polityka prywatności aplikacji PhasmoTome</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        h1 {
+            text-align: center;
+        }
+        p {
+            margin-bottom: 20px;
+        }
+        .contact-info {
+            margin-top: 40px;
+        }
+    </style>
 </head>
 <body>
-    test
+    <h1>Polityka prywatności aplikacji PhasmoTome</h1>
+    <p>Dziękujemy za korzystanie z aplikacji PhasmoTome. Niniejsza polityka prywatności wyjaśnia, że aplikacja PhasmoTome nie zbiera, nie przechowuje ani nie udostępnia żadnych danych osobowych ani innych informacji użytkowników.</p>
+    <ol>
+        <li><strong>Brak zbierania danych osobowych:</strong> PhasmoTome nie zbiera żadnych danych osobowych od użytkowników. Nie prosimy o żadne dane osobowe ani nie śledzimy działań użytkowników w aplikacji.</li>
+        <li><strong>Bez użycia plików cookie:</strong> PhasmoTome nie używa plików cookie ani innych technologii śledzenia w celu monitorowania działań użytkowników.</li>
+        <li><strong>Bez udostępniania danych:</strong> Wszelkie informacje wyświetlane w aplikacji PhasmoTome są generowane lokalnie i nie są przesyłane ani udostępniane do żadnych zewnętrznych serwerów lub stron trzecich.</li>
+        <li><strong>Linki do platform Twitch.tv i strony z polityką:</strong> W aplikacji PhasmoTome mogą być zawarte linki, które przenoszą użytkowników na platformę Twitch.tv oraz na stronę z polityką prywatności. PhasmoTome nie jest odpowiedzialne za praktyki prywatności tych platform ani stron trzecich. Prosimy o zapoznanie się z polityką prywatności odpowiednich platform i stron trzecich.</li>
+    </ol>
+    <div class="contact-info">
+        <p><strong>Kontakt:</strong> Jeśli masz jakiekolwiek pytania dotyczące polityki prywatności aplikacji PhasmoTome, prosimy o kontakt pod adresem <a href="mailto:twoj@email.pl">twoj@email.pl</a>.</p>
+    </div>
+    <p>Prosimy o zapoznanie się z tą polityką prywatności przed korzystaniem z aplikacji PhasmoTome. Kontynuując korzystanie z aplikacji, zgadzasz się na warunki tej polityki prywatności.</p>
+    <p><em>Ostatnia aktualizacja: [data ostatniej aktualizacji]</em></p>
 </body>
 </html>
