--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polityka prywatności aplikacji PhasmoTome</title>
+    <title>Privacy Policy for PhasmoTome Application</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,18 +23,18 @@
     </style>
 </head>
 <body>
-    <h1>Polityka prywatności aplikacji PhasmoTome</h1>
-    <p>Dziękujemy za korzystanie z aplikacji PhasmoTome. Niniejsza polityka prywatności wyjaśnia, że aplikacja PhasmoTome nie zbiera, nie przechowuje ani nie udostępnia żadnych danych osobowych ani innych informacji użytkowników.</p>
+    <h1>Privacy Policy for PhasmoTome Application</h1>
+    <p>Thank you for using the PhasmoTome application. This privacy policy explains that the PhasmoTome application does not collect, store, or share any personal data or other user information.</p>
     <ol>
-        <li><strong>Brak zbierania danych osobowych:</strong> PhasmoTome nie zbiera żadnych danych osobowych od użytkowników. Nie prosimy o żadne dane osobowe ani nie śledzimy działań użytkowników w aplikacji.</li>
-        <li><strong>Bez użycia plików cookie:</strong> PhasmoTome nie używa plików cookie ani innych technologii śledzenia w celu monitorowania działań użytkowników.</li>
-        <li><strong>Bez udostępniania danych:</strong> Wszelkie informacje wyświetlane w aplikacji PhasmoTome są generowane lokalnie i nie są przesyłane ani udostępniane do żadnych zewnętrznych serwerów lub stron trzecich.</li>
-        <li><strong>Linki do platform Twitch.tv i strony z polityką:</strong> W aplikacji PhasmoTome mogą być zawarte linki, które przenoszą użytkowników na platformę Twitch.tv oraz na stronę z polityką prywatności. PhasmoTome nie jest odpowiedzialne za praktyki prywatności tych platform ani stron trzecich. Prosimy o zapoznanie się z polityką prywatności odpowiednich platform i stron trzecich.</li>
+        <li><strong>No Collection of Personal Data:</strong> PhasmoTome does not collect any personal data from users. We do not ask for any personal information nor do we track user activities within the application.</li>
+        <li><strong>No Use of Cookies:</strong> PhasmoTome does not use cookies or other tracking technologies to monitor user activities.</li>
+        <li><strong>No Data Sharing:</strong> All information displayed in the PhasmoTome application is generated locally and is not transmitted or shared with any external servers or third-party websites.</li>
+        <li><strong>Links to Twitch.tv Platform and Privacy Policy Page:</strong> The PhasmoTome application may contain links that direct users to the Twitch.tv platform and to a privacy policy page. PhasmoTome is not responsible for the privacy practices of these platforms or third-party websites. Please review the privacy policy of the respective platforms and third-party websites.</li>
     </ol>
     <div class="contact-info">
-        <p><strong>Kontakt:</strong> Jeśli masz jakiekolwiek pytania dotyczące polityki prywatności aplikacji PhasmoTome, prosimy o kontakt pod adresem <a href="mailto:twoj@email.pl">twoj@email.pl</a>.</p>
+        <p><strong>Contact:</strong> If you have any questions regarding the privacy policy of the PhasmoTome application, please contact us at <a href="mailto:ezograndeworker@gmail.com">ezograndeworker@gmail.com</a>.</p>
     </div>
-    <p>Prosimy o zapoznanie się z tą polityką prywatności przed korzystaniem z aplikacji PhasmoTome. Kontynuując korzystanie z aplikacji, zgadzasz się na warunki tej polityki prywatności.</p>
-    <p><em>Ostatnia aktualizacja: [data ostatniej aktualizacji]</em></p>
+    <p>Please review this privacy policy before using the PhasmoTome application. By continuing to use the application, you agree to the terms of this privacy policy.</p>
+    <p><em>Last updated: 09.04.2024</em></p>
 </body>
 </html>
