--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 </head>
 <body>
     <h1>Privacy Policy for PhasmoTome Application</h1>
-    <p>Thank you for using the PhasmoTome application. This privacy policy explains that the PhasmoTome application does not collect, store, or share any personal data or other user information.</p>
     <ol>
-        <li><strong>No Collection of Personal Data:</strong> PhasmoTome does not collect any personal data from users. We do not ask for any personal information nor do we track user activities within the application.</li>
+        <li><strong>No Collection of Personal Data:</strong> PhasmoTome does not collect any personal data from users. It does not require access to personal information such as phone numbers or geolocations, nor does it track user activities within the application.</li>
         <li><strong>No Use of Cookies:</strong> PhasmoTome does not use cookies or other tracking technologies to monitor user activities.</li>
+        <li><strong>No Purchases:</strong> The application does not offer the ability to make purchases. It is solely a guide for players.</li>
         <li><strong>No Data Sharing:</strong> All information displayed in the PhasmoTome application is generated locally and is not transmitted or shared with any external servers or third-party websites.</li>
-        <li><strong>Links to Twitch.tv Platform and Privacy Policy Page:</strong> The PhasmoTome application may contain links that direct users to the Twitch.tv platform and to a privacy policy page. PhasmoTome is not responsible for the privacy practices of these platforms or third-party websites. Please review the privacy policy of the respective platforms and third-party websites.</li>
+        <li><strong>Links to Twitch.tv Platform:</strong> The application contains links to the secure TwitchTV platform in the 'Creators' section. These links redirect users to creators' channels and encourage them to follow the channels.</li>
     </ol>
     <div class="contact-info">
         <p><strong>Contact:</strong> If you have any questions regarding the privacy policy of the PhasmoTome application, please contact us at <a href="mailto:ezograndeworker@gmail.com">ezograndeworker@gmail.com</a>.</p>
