--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li><strong>No Data Sharing:</strong> All information displayed in the PhasmoTome application is generated locally and is not transmitted or shared with any external servers or third-party websites.</li>
         <li><strong>Links to Twitch.tv Platform:</strong> The application contains links to the secure TwitchTV platform in the 'Creators' section. These links redirect users to creators' channels and encourage them to follow the channels.</li>
     </ol>
+    <p><strong>Child Safety:</strong> PhasmoTome is designed to be safe for children. It does not promote the use of alcohol, engage in occult activities, or contain any pornography or other inappropriate content for young users.</p>
     <div class="contact-info">
         <p><strong>Contact:</strong> If you have any questions regarding the privacy policy of the PhasmoTome application, please contact us at <a href="mailto:ezograndeworker@gmail.com">ezograndeworker@gmail.com</a>.</p>
     </div>
