--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy for PhasmoTome Application</title>
+    <title>Privacy Policy for GhosrManual Application</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,19 +23,19 @@
     </style>
 </head>
 <body>
-    <h1>Privacy Policy for PhasmoTome Application</h1>
+    <h1>Privacy Policy for GhostManual Application</h1>
     <ol>
-        <li><strong>No Collection of Personal Data:</strong> PhasmoTome does not collect any personal data from users. It does not require access to personal information such as phone numbers or geolocations, nor does it track user activities within the application.</li>
-        <li><strong>No Use of Cookies:</strong> PhasmoTome does not use cookies or other tracking technologies to monitor user activities.</li>
+        <li><strong>No Collection of Personal Data:</strong> GhostManual does not collect any personal data from users. It does not require access to personal information such as phone numbers or geolocations, nor does it track user activities within the application.</li>
+        <li><strong>No Use of Cookies:</strong> GhostManual does not use cookies or other tracking technologies to monitor user activities.</li>
         <li><strong>No Purchases:</strong> The application does not offer the ability to make purchases. It is solely a guide for players.</li>
-        <li><strong>No Data Sharing:</strong> All information displayed in the PhasmoTome application is generated locally and is not transmitted or shared with any external servers or third-party websites.</li>
+        <li><strong>No Data Sharing:</strong> All information displayed in the GhostManual application is generated locally and is not transmitted or shared with any external servers or third-party websites.</li>
         <li><strong>Links to Twitch.tv Platform:</strong> The application contains links to the secure TwitchTV platform in the 'Creators' section. These links redirect users to creators' channels and encourage them to follow the channels.</li>
     </ol>
-    <p><strong>Child Safety:</strong> PhasmoTome is designed to be safe for children. It does not promote the use of alcohol, engage in occult activities, or contain any pornography or other inappropriate content for young users.</p>
+    <p><strong>Child Safety:</strong> GhostManual is designed to be safe for children. It does not promote the use of alcohol, engage in occult activities, or contain any pornography or other inappropriate content for young users.</p>
     <div class="contact-info">
-        <p><strong>Contact:</strong> If you have any questions regarding the privacy policy of the PhasmoTome application, please contact us at <a href="mailto:ezograndeworker@gmail.com">ezograndeworker@gmail.com</a>.</p>
+        <p><strong>Contact:</strong> If you have any questions regarding the privacy policy of the GhostManual application, please contact us at <a href="mailto:ezograndeworker@gmail.com">ezograndeworker@gmail.com</a>.</p>
     </div>
-    <p>Please review this privacy policy before using the PhasmoTome application. By continuing to use the application, you agree to the terms of this privacy policy.</p>
+    <p>Please review this privacy policy before using the GhostManual application. By continuing to use the application, you agree to the terms of this privacy policy.</p>
     <p><em>Last updated: 09.04.2024</em></p>
 </body>
 </html>
